test_suite5/ALAN/test_suite/alan-2022-examples/failing/002390_mutation.alan
source z begin get integer M end
